Added new resource field
